# pmsm_foc_platform

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
app/: CMakeLists.txt  QEI_sensor.hpp  VfControl.hpp  adrc.hpp  auto_setup.hpp  control.hpp  current_control.hpp  dq_limiter.hpp  emk_observer.hpp  fault_manager.hpp  foc.hpp  heartbeat.hpp  interfaces.hpp  math.hpp  motor_control.hpp  motor_params.hpp  open_loop_sensor.hpp  pi_controller.hpp  powerstage_config.hpp  precontrol.hpp  ramp_generator.hpp  runtime_measurement.hpp  sensor.hpp  sensor_selector.hpp  svm.hpp  telemetry.hpp  theta_generator.hpp  transform.hpp  user_interface.hpp
app/include/app/: heartbeat.hpp
bsp/: CMakeLists.txt  board.cpp  board.hpp
bsp/G431/: bsp.hpp  pinning.hpp
bsp/include/bsp/: board.hpp
bsp/src/: board.cpp
bsp/stm32g431/: bsp.hpp  pinning.hpp
cmake/: arm-none-eabi-toolchain.cmake  stm32g431.cmake
cubeMx/: .mxproject  CMakeLists.txt  cubeMx.ioc
cubeMx/Core/Inc/: main.h  stm32g4xx_it.h
cubeMx/Core/Src/: adc.c  gpio.c  main.c  stm32g4xx_it.c  tim.c  usart.c
cubeMx/cmake/stm32cubemx/: CMakeLists.txt
hal/: CMakeLists.txt  gpio_out_hal.hpp
hal/include/hal/: gpio_out_hal.hpp  tick_hal.hpp
hal/sim/: sim_adc.hpp  sim_encoder.hpp  sim_gate_enable.hpp  sim_inverter.hpp
hal/src/: gpio_out_hal.cpp  tick_hal.cpp
hal/stm32g431/: adc.hpp  adc_sense_config.hpp  current_adc.hpp  current_sense_config.hpp  dwt_cycle_counter.hpp  encoder.hpp  gate_driver_enable.hpp  inverter.hpp  tick_hal.hpp
platform/: CMakeLists.txt  irq_handler.cpp  system_clock.cpp  system_clock.hpp
platform/sim/: sim_runner.hpp
platform/src/: main.cpp  system_clock.cpp
platform/stm32G431/: controlInputsFromUart.hpp  foc_runner.hpp  irq_handler.cpp  main.cpp  main.hpp  motor_run.hpp  telemetry.hpp  uart_link.hpp
scripts/: read_telem_gui.py
simulation/: csv_logger.hpp  load.hpp  motor_model.hpp  motor_parameter_sets.hpp  solver.hpp
tests/: CMakeLists.txt  pi_controller_test.cpp  svm_test.cpp  transform_test.cpp
tests/sim/: CMakeLists.txt  system_test.cpp
tests/unit_tests/: CMakeLists.txt  dq_limiter_test.cpp  svm_test.cpp  transform_test.cpp
